roles/traefik/files/30-traefik-service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - name: web
      protocol: TCP
      port: 80
    - name: admin
      protocol: TCP
      port: 8080
